retrive/objects/Opportunity.object
<CustomObject>
	<fields>
        <fullName>Vat_Percentage__c</fullName>
        <label>Vat Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Of_Tax_Obligation__c</fullName>
        <label>Date Of Tax Obligation</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Sale Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
	 <validationRules>
        <fullName>Date_Of_Tax_Obligation_And_Sale_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 Date_Of_Tax_Obligation__c &lt; Sale_Date__c,
	MONTH( Date_Of_Tax_Obligation__c) &lt;&gt; MONTH(Sale_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Date_Of_Tax_Obligation__c</errorDisplayField>
        <errorMessage>Date oF Tax Obligation cant&apos;t be before Sale Date and after last day of Sale Date month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Date_And_Sale_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Payment_Date__c &lt; Sale_Date__c</errorConditionFormula>
        <errorDisplayField>Payment_Date__c</errorDisplayField>
        <errorMessage>Payment Date can&apos;t be before Sale Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publish_Date_And_Sale_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    Publish_Date__c &lt; Sale_Date__c,
    AND(
								MONTH(Publish_Date__c) = MONTH(ADDMONTHS(Sale_Date__c,1)),
								MONTH(Publish_Date__c) &lt; MONTH(ADDMONTHS(Sale_Date__c,2)),
								DAY(Publish_Date__c) &gt; 15
    ),
    MONTH(Publish_Date__c) &gt; MONTH(ADDMONTHS(Sale_Date__c,1))
)</errorConditionFormula>
        <errorDisplayField>Publish_Date__c</errorDisplayField>
        <errorMessage>Publish Date can&apos;t be before Sale Date and after 15 day of next Sale Date month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sale_Date_And_Today</fullName>
        <active>true</active>
        <errorConditionFormula>MONTH(Sale_Date__c) &gt; MONTH(ADDMONTHS(TODAY(),1))</errorConditionFormula>
        <errorDisplayField>Sale_Date__c</errorDisplayField>
        <errorMessage>Sale Date can&apos;t be later than 2 next months from the current month</errorMessage>
    </validationRules>
</CustomObject>